# boggle

./: .gitignore  Cargo.toml
src/: main.rs
src/client/: chars.rs  dice.rs  main.rs  parse_alpha_txt.py  platform.rs  source.txt
src/client/sub_dicts/: asubDict.json  bsubDict.json  csubDict.json  esubDict.json  jsubDict.json  lsubDict.json  msubDict.json  nsubDict.json  psubDict.json  qsubDict.json  vsubDict.json  wsubDict.json
src/server/: main.rs  server.rs
src/shared/: task.rs  utils.rs
src/sub_dicts/: dsubDict.json  fsubDict.json  gsubDict.json  hsubDict.json  isubDict.json  ksubDict.json  osubDict.json  rsubDict.json  ssubDict.json  tsubDict.json  usubDict.json  xsubDict.json  ysubDict.json  zsubDict.json
