[package]
name = "boggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
rand = "0.8.4"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
chrono = "0.4.19"
timer = "0.2.0"
stoppable_thread = "0.2.1"
